.gitignore is now working